--- a/local/pressure-washing-carcroft.html
+++ b/local/pressure-washing-carcroft.html
@@ -4,11 +4,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Pressure Washing in Carcroft, Doncaster | Driveway & Patio Cleaning</title>
+<title>Pressure Washing Carcroft Doncaster | Driveway & Patio Cleaning</title>
 
 <link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-carcroft.html">
 
-<meta name="description" content="Local pressure washing in Carcroft, Doncaster. Driveway, patio, decking and exterior cleaning by experienced professionals. Free quotes. Call 07735 873694.">
+<meta name="description" content="Professional pressure washing in Carcroft, Doncaster. Driveways, patios, decking, paths and exterior cleaning by a trusted local service. Call 07735 873694.">
 
 <meta name="robots" content="index, follow">
 
@@ -21,17 +21,17 @@ html{ -webkit-text-size-adjust:100%; }
 body{
 margin:0;
 font-family:Arial, sans-serif;
-background:#f7f7f7;
+background:#f8f8f8;
 color:#222;
 line-height:1.65;
 }
 
 /* HEADER */
 header{
-text-align:center;
-padding:26px 12px;
 background:#fff;
-border-bottom:4px solid #1abc9c;
+padding:26px 12px;
+text-align:center;
+border-bottom:4px solid #27ae60;
 }
 
 .logo{ max-height:90px; width:auto; }
@@ -40,17 +40,17 @@ border-bottom:4px solid #1abc9c;
 display:inline-block;
 margin-top:18px;
 padding:15px 30px;
-background:#111;
+background:#000;
 color:#fff;
 font-size:19px;
 font-weight:bold;
-border-radius:6px;
 text-decoration:none;
+border-radius:6px;
 min-height:48px;
 }
 .call-btn:hover{ background:#333; }
 
-/* CONTENT */
+/* MAIN */
 main{
 max-width:920px;
 margin:0 auto;
@@ -61,10 +61,10 @@ padding:28px 18px;
 h1,h2,h3{ color:#111; }
 
 /* FORM */
-form label{
+label{
 font-weight:bold;
-margin-bottom:6px;
 display:block;
+margin-bottom:6px;
 cursor:pointer;
 }
 
@@ -96,8 +96,42 @@ min-height:48px;
 button:focus,
 a:focus,
 input:focus{
-outline:3px solid #1abc9c;
+outline:3px solid #27ae60;
 outline-offset:2px;
+}
+
+/* IMAGES */
+.service-image{
+width:100%;
+max-width:900px;
+display:block;
+margin:20px auto;
+border-radius:6px;
+}
+
+/* LIGHTBOX */
+.lightbox{
+display:none;
+position:fixed;
+z-index:9999;
+top:0;
+left:0;
+width:100%;
+height:100%;
+background:rgba(0,0,0,0.85);
+align-items:center;
+justify-content:center;
+}
+
+.lightbox img{
+max-width:95%;
+max-height:95%;
+border-radius:6px;
+box-shadow:0 0 25px #000;
+}
+
+.lightbox:target{
+display:flex;
 }
 
 /* FOOTER */
@@ -109,6 +143,7 @@ padding:26px 15px;
 margin-top:40px;
 font-size:14px;
 }
+
 footer a{
 color:#fff;
 text-decoration:none;
@@ -117,17 +152,17 @@ display:inline-block;
 }
 </style>
 
-<!-- LOCAL BUSINESS SCHEMA (UNIQUE) -->
+<!-- LOCAL BUSINESS SCHEMA -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
-"@type":"HousePainter",
+"@type":"HomeAndConstructionBusiness",
 "@id":"https://homerepairs4u.com/local/pressure-washing-carcroft.html#business",
-"name":"Home Repairs 4U – Carcroft Pressure Washing",
+"name":"Home Repairs 4U – Pressure Washing Carcroft",
 "url":"https://homerepairs4u.com/local/pressure-washing-carcroft.html",
 "image":"https://homerepairs4u.com/images/logo.webp",
 "telephone":"+447735873694",
-"description":"Local pressure washing and exterior surface cleaning services in Carcroft, Doncaster.",
+"description":"Professional pressure washing and exterior surface cleaning in Carcroft, Doncaster.",
 "address":{
 "@type":"PostalAddress",
 "addressLocality":"Carcroft",
@@ -142,7 +177,7 @@ display:inline-block;
 }
 </script>
 
-<!-- FAQ SCHEMA (UNIQUE QUESTIONS) -->
+<!-- FAQ SCHEMA -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
@@ -150,18 +185,18 @@ display:inline-block;
 "mainEntity":[
 {
 "@type":"Question",
-"name":"What types of surfaces can you clean in Carcroft?",
-"acceptedAnswer":{"@type":"Answer","text":"We clean driveways, patios, paths, decking, brickwork, walls, steps and other external hard surfaces using pressure washing methods suited to each material."}
+"name":"Do you provide pressure washing services in Carcroft?",
+"acceptedAnswer":{"@type":"Answer","text":"Yes, we offer professional pressure washing throughout Carcroft and nearby areas of Doncaster."}
 },
 {
 "@type":"Question",
-"name":"Is pressure washing suitable for older surfaces?",
-"acceptedAnswer":{"@type":"Answer","text":"Yes. Pressure levels are adjusted depending on age and condition to ensure effective cleaning without surface damage."}
+"name":"Can pressure washing improve slippery driveways and patios?",
+"acceptedAnswer":{"@type":"Answer","text":"Yes. Removing algae, moss and surface grime greatly improves safety and grip on outdoor surfaces."}
 },
 {
 "@type":"Question",
-"name":"Do you offer pressure washing for residential properties only?",
-"acceptedAnswer":{"@type":"Answer","text":"We provide pressure washing for both residential and small commercial properties throughout Carcroft and nearby areas."}
+"name":"Are different surfaces cleaned in different ways?",
+"acceptedAnswer":{"@type":"Answer","text":"Absolutely. Pressure levels and techniques are adjusted depending on whether the surface is block paving, concrete, stone, timber or brickwork."}
 }
 ]}
 </script>
@@ -183,35 +218,36 @@ display:inline-block;
 <h1>Pressure Washing Services in Carcroft, Doncaster</h1>
 
 <p>
-<strong>Home Repairs 4U</strong> provides professional <strong>pressure washing services in Carcroft, Doncaster</strong>, helping homeowners and landlords restore the appearance of outdoor surfaces.
-From driveways and patios to paths, walls and decking, we remove dirt, algae and staining that builds up over time.
+Home Repairs 4U provides reliable and effective <strong>pressure washing in Carcroft</strong>, helping homeowners restore the appearance and safety of their outdoor areas. Over time, driveways, patios and paths collect dirt, algae and staining that can make surfaces look tired and become slippery.
 </p>
 
 <p>
-External surfaces in Carcroft are constantly exposed to rain, traffic residue, moss and air pollution. Without regular cleaning, these surfaces can become slippery, discoloured and difficult to maintain. Our pressure washing service is designed to reverse this damage and significantly improve kerb appeal.
+Our professional pressure washing service removes built-up grime and organic growth, revealing the original colour of the surface beneath. The result is a cleaner, brighter and safer exterior that improves the overall look of your property.
 </p>
 
-<h2>Get a Price Estimate for Pressure Washing</h2>
-<p>Use the estimator below to calculate an approximate cost based on area size and treatment options.</p>
+<h2>Instant Pressure Washing Price Estimate</h2>
+<p>
+Use the calculator below to get a guide price based on the size of the area and the treatments required.
+</p>
 
 <form id="quoteForm">
 
-<label for="sqm">Approximate surface area (square metres)</label>
+<label for="sqm">Estimated surface size (square metres)</label>
 <input type="number" id="sqm" name="sqm" min="1" step="0.01" required>
 
 <div class="form-row">
 <input type="checkbox" id="jetwash" checked>
-<label for="jetwash">Standard pressure wash</label>
+<label for="jetwash">Standard pressure washing</label>
 </div>
 
 <div class="form-row">
 <input type="checkbox" id="fungicide">
-<label for="fungicide">Algae and moss inhibitor treatment</label>
+<label for="fungicide">Moss and algae treatment</label>
 </div>
 
 <div class="form-row">
 <input type="checkbox" id="hardbrush">
-<label for="hardbrush">Manual scrubbing for stubborn areas</label>
+<label for="hardbrush">Detailed scrubbing for heavy soiling</label>
 </div>
 
 <div class="form-row">
@@ -221,11 +257,11 @@ External surfaces in Carcroft are constantly exposed to rain, traffic residue, m
 
 <div class="form-row">
 <input type="checkbox" id="sealing">
-<label for="sealing">Protective surface sealant</label>
+<label for="sealing">Surface sealing for protection</label>
 </div>
 
 <button type="button" onclick="calculateQuote()" class="call-btn">
-Calculate Estimate
+Get Estimated Price
 </button>
 
 </form>
@@ -235,59 +271,86 @@ Calculate Estimate
 <script>
 function calculateQuote(){
 const sqm=parseFloat(document.getElementById('sqm').value);
-if(!sqm||sqm<=0){alert("Please enter a valid surface area.");return;}
+if(!sqm||sqm<=0){alert("Please enter a valid surface size.");return;}
 
 let total=45;
-let breakdown=["Initial setup and travel: £45.00"];
+let items=["Base service, setup and travel: £45.00"];
 
-if(jetwash.checked){let p=sqm*2.6;total+=p;breakdown.push(`Standard pressure wash: £${p.toFixed(2)}`);}
-if(fungicide.checked){let p=sqm*0.9;total+=p;breakdown.push(`Algae inhibitor treatment: £${p.toFixed(2)}`);}
-if(hardbrush.checked){let p=sqm*0.8;total+=p;breakdown.push(`Manual scrubbing: £${p.toFixed(2)}`);}
-if(resanding.checked){let p=sqm*3.8;total+=p;breakdown.push(`Block paving re-sanding: £${p.toFixed(2)}`);}
-if(sealing.checked){let p=sqm*4.8;total+=p;breakdown.push(`Surface sealing: £${p.toFixed(2)}`);}
+if(jetwash.checked){let p=sqm*2.6;total+=p;items.push(`Pressure washing: £${p.toFixed(2)}`);}
+if(fungicide.checked){let p=sqm*0.9;total+=p;items.push(`Moss & algae treatment: £${p.toFixed(2)}`);}
+if(hardbrush.checked){let p=sqm*0.8;total+=p;items.push(`Detailed scrubbing: £${p.toFixed(2)}`);}
+if(resanding.checked){let p=sqm*3.8;total+=p;items.push(`Re-sanding block paving: £${p.toFixed(2)}`);}
+if(sealing.checked){let p=sqm*4.8;total+=p;items.push(`Surface sealing: £${p.toFixed(2)}`);}
 
 document.getElementById("quoteResult").innerHTML =
-`<ul>${breakdown.map(b=>`<li>${b}</li>`).join("")}</ul><p>Estimated total: £${total.toFixed(2)}</p>`;
+`<ul>${items.map(i=>`<li>${i}</li>`).join("")}</ul><p><strong>Estimated total: £${total.toFixed(2)}</strong></p>`;
 }
 </script>
 
-<h2>Exterior Surfaces We Clean in Carcroft</h2>
+<h2>Exterior Cleaning Services We Offer</h2>
 
-<h3>Driveway Cleaning</h3>
+<h3>Driveway Pressure Washing</h3>
 <p>
-Driveways in Carcroft are frequently affected by tyre marks, oil stains and organic growth. Our pressure washing process lifts embedded grime from block paving, concrete and tarmac, restoring a cleaner and safer finish.
+Driveways in Carcroft commonly suffer from tyre marks, oil staining and moss growth. Our pressure washing restores block paving, concrete and tarmac driveways, instantly improving appearance and safety.
 </p>
+
+<a href="#driveway-lightbox">
+<img src="/images/driveway-pressure-wash.webp" alt="Driveway pressure washing in Carcroft Doncaster" class="service-image" loading="lazy">
+</a>
+<div id="driveway-lightbox" class="lightbox">
+<a href="#"><img src="/images/driveway-pressure-wash.webp" alt="Driveway pressure washing Carcroft enlarged"></a>
+</div>
 
 <h3>Patio and Paving Cleaning</h3>
 <p>
-Patios often develop black spot, moss and weed growth in shaded areas. We clean stone, concrete and porcelain patios using controlled pressure to protect joints and surface integrity.
+Patios often develop black spot, algae and weed growth, especially in shaded areas. We clean stone, concrete and porcelain patios using controlled pressure to protect joints and surfaces.
 </p>
 
-<h3>Decking Restoration</h3>
+<a href="#patio-lightbox">
+<img src="/images/patio-jet-wash.webp" alt="Patio pressure washing in Carcroft Doncaster" class="service-image" loading="lazy">
+</a>
+<div id="patio-lightbox" class="lightbox">
+<a href="#"><img src="/images/patio-jet-wash.webp" alt="Patio pressure washing Carcroft enlarged"></a>
+</div>
+
+<h3>Decking Cleaning</h3>
 <p>
-Timber decking requires careful handling. Our cleaning approach removes algae and surface dirt while preserving the wood grain and reducing the risk of splintering.
+Decking becomes slippery when algae builds up. Our careful cleaning method removes growth while protecting the timber, leaving decking safer and ready for treatment if required.
 </p>
 
-<h3>Walls, Steps and Pathways</h3>
+<a href="#deck-lightbox">
+<img src="/images/deck.webp" alt="Decking pressure washing in Carcroft Doncaster" class="service-image" loading="lazy">
+</a>
+<div id="deck-lightbox" class="lightbox">
+<a href="#"><img src="/images/deck.webp" alt="Decking pressure washing Carcroft enlarged"></a>
+</div>
+
+<h3>Walls, Paths and Steps</h3>
 <p>
-Pressure washing external walls, garden steps and access paths can dramatically improve the overall appearance of your property. Regular cleaning also reduces slip hazards in damp conditions.
+Cleaning walls, paths and steps can dramatically freshen the exterior of a property. Pressure washing removes grime, algae and pollution staining, improving both appearance and safety.
 </p>
 
-<h2>Why Carcroft Customers Choose Home Repairs 4U</h2>
+<a href="#walls-lightbox">
+<img src="/images/pressure-wash-1.webp" alt="Exterior wall and pathway cleaning Carcroft Doncaster" class="service-image" loading="lazy">
+</a>
+<div id="walls-lightbox" class="lightbox">
+<a href="#"><img src="/images/pressure-wash-1.webp" alt="Exterior pressure washing Carcroft enlarged"></a>
+</div>
+
+<h2>Why Choose Home Repairs 4U in Carcroft?</h2>
 
 <ul>
-<li>✔ Over three decades of practical experience</li>
+<li>✔ Over 30 years of practical experience</li>
 <li>✔ Fully insured exterior cleaning services</li>
 <li>✔ Local Doncaster-based business</li>
-<li>✔ Transparent pricing and clear estimates</li>
-<li>✔ Careful cleaning methods tailored to each surface</li>
+<li>✔ Honest pricing and clear estimates</li>
+<li>✔ Safe methods for every surface type</li>
 </ul>
 
-<h2>Book Pressure Washing in Carcroft Today</h2>
+<h2>Book Pressure Washing in Carcroft</h2>
 
 <p>
-If your outdoor surfaces are looking tired, slippery or heavily stained, our pressure washing service can make a noticeable difference.
-We serve Carcroft and nearby Doncaster areas and are happy to provide advice or arrange a visit.
+If your driveway, patio or outdoor areas need refreshing, our pressure washing service can make a dramatic difference. We work throughout Carcroft and surrounding Doncaster areas.
 </p>
 
 <div style="text-align:center;margin:36px 0;">
@@ -297,7 +360,7 @@ We serve Carcroft and nearby Doncaster areas and are happy to provide advice or 
 </main>
 
 <footer>
-© Home Repairs 4U | Pressure Washing Services in Carcroft, Doncaster
+© Home Repairs 4U | Pressure Washing in Carcroft, Doncaster
 <br>
 <a href="/services/guttering.html">Guttering</a>
 <a href="/services/fence-installation.html">Fencing</a>
