--- a/local/pressure-washing-carcroft.html
+++ b/local/pressure-washing-carcroft.html
@@ -4,52 +4,36 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Pressure Washing Carcroft Doncaster | Driveways, Patios & Decking Cleaning</title>
-
+<title>Professional Pressure Washing in Carcroft Doncaster | Driveways, Patios & Decking</title>
 <link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-carcroft.html">
-
-<meta name="description" content="Expert pressure washing in Carcroft, Doncaster. Restore driveways, patios, decking, walls and pathways with a professional exterior cleaning service. Call 07735 873694.">
-
+<meta name="description" content="Professional pressure washing and exterior cleaning in Carcroft, Doncaster. Driveways, patios, decking, walls, and pathways restored by experts. Call 07735 873694.">
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="preload" as="image" href="/images/logo.webp">
 
 <style>
-html{ -webkit-text-size-adjust:100%; }
-
-body{margin:0;font-family:Arial, sans-serif;background:#f8f8f8;color:#222;line-height:1.65;}
-
-/* HEADER */
+html{-webkit-text-size-adjust:100%;}
+body{margin:0;font-family:Arial,sans-serif;background:#f8f8f8;color:#222;line-height:1.65;}
 header{background:#fff;padding:26px 12px;text-align:center;border-bottom:4px solid #27ae60;}
 .logo{max-height:90px;width:auto;}
 .call-btn{display:inline-block;margin-top:18px;padding:15px 30px;background:#000;color:#fff;font-size:19px;font-weight:bold;text-decoration:none;border-radius:6px;min-height:48px;}
 .call-btn:hover{background:#333;}
-
-/* MAIN */
 main{max-width:950px;margin:0 auto;background:#fff;padding:28px 18px;}
 h1,h2,h3{color:#111;}
-
-/* FORM */
 label{font-weight:bold;display:block;margin-bottom:6px;cursor:pointer;}
 input[type="number"]{width:100%;padding:12px;font-size:16px;margin-bottom:18px;}
 .form-row{display:flex;align-items:center;gap:14px;padding:12px 10px;margin-bottom:12px;}
 .form-row input{width:22px;height:22px;}
 button{cursor:pointer;min-height:48px;}
 button:focus,a:focus,input:focus{outline:3px solid #27ae60;outline-offset:2px;}
-
-/* IMAGES */
 .service-image{width:100%;max-width:900px;display:block;margin:20px auto;border-radius:6px;}
-
-/* LIGHTBOX */
 .lightbox{display:none;position:fixed;z-index:9999;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.85);align-items:center;justify-content:center;}
 .lightbox img{max-width:95%;max-height:95%;border-radius:6px;box-shadow:0 0 25px #000;}
 .lightbox:target{display:flex;}
-
-/* FOOTER */
 footer{background:#000;color:#fff;text-align:center;padding:26px 15px;margin-top:40px;font-size:14px;}
 footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 </style>
 
-<!-- LOCAL BUSINESS SCHEMA -->
+<!-- LocalBusiness + Geo + ServiceArea Schema -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
@@ -59,22 +43,25 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 "url":"https://homerepairs4u.com/local/pressure-washing-carcroft.html",
 "image":"https://homerepairs4u.com/images/logo.webp",
 "telephone":"+447735873694",
-"description":"Professional pressure washing and exterior surface cleaning in Carcroft, Doncaster, including driveways, patios, decking, walls and paths.",
+"description":"Professional pressure washing and exterior surface cleaning in Carcroft, Doncaster. Driveways, patios, decking, walls and pathways restored by experts.",
 "address":{"@type":"PostalAddress","addressLocality":"Carcroft","addressRegion":"South Yorkshire","addressCountry":"GB"},
-"areaServed":{"@type":"AdministrativeArea","name":"Carcroft, Doncaster"},
-"openingHours":"Mo-Su 07:00-20:00"
+"geo":{"@type":"GeoCoordinates","latitude":53.593,"longitude":-1.177},
+"openingHours":"Mo-Su 07:00-20:00",
+"areaServed":[{"@type":"Place","name":"Carcroft"},{"@type":"Place","name":"Doncaster"},{"@type":"Place","name":"Adwick"},{"@type":"Place","name":"Bentley"}],
+"serviceType":["Pressure washing","Jet washing","Driveway cleaning","Patio cleaning","Decking cleaning","Exterior surface cleaning"]
 }
 </script>
 
-<!-- FAQ SCHEMA -->
+<!-- FAQ Schema -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
 "@type":"FAQPage",
 "mainEntity":[
-{"@type":"Question","name":"Do you provide residential and commercial services?","acceptedAnswer":{"@type":"Answer","text":"Yes, we provide professional pressure washing for both residential and small commercial properties throughout Carcroft and nearby areas."}},
-{"@type":"Question","name":"How often should surfaces be cleaned?","acceptedAnswer":{"@type":"Answer","text":"Most driveways, patios, and decking benefit from a professional clean once a year, although high-traffic or shaded areas may require more frequent attention."}},
-{"@type":"Question","name":"Are your methods safe for all surfaces?","acceptedAnswer":{"@type":"Answer","text":"Absolutely. We adjust water pressure and techniques depending on the material to prevent damage while ensuring a deep clean."}}
+{"@type":"Question","name":"Do you offer residential and commercial services?","acceptedAnswer":{"@type":"Answer","text":"Yes, we provide professional pressure washing for both residential and small commercial properties in Carcroft and nearby areas."}},
+{"@type":"Question","name":"How often should outdoor surfaces be cleaned?","acceptedAnswer":{"@type":"Answer","text":"Most driveways, patios, and decking benefit from a professional clean at least once a year, with more frequent cleaning for shaded or high-traffic areas."}},
+{"@type":"Question","name":"Are your methods safe for all surfaces?","acceptedAnswer":{"@type":"Answer","text":"Yes, we adjust water pressure and cleaning methods according to surface type to prevent damage while ensuring a thorough clean."}},
+{"@type":"Question","name":"Do you provide re-sanding or sealing?","acceptedAnswer":{"@type":"Answer","text":"Yes, we offer re-sanding for block paving and optional sealing to protect surfaces and prolong cleanliness."}}
 ]
 }
 </script>
@@ -90,52 +77,50 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 
 <main>
 
-<h1>Professional Pressure Washing in Carcroft, Doncaster</h1>
+<h1>Expert Pressure Washing in Carcroft, Doncaster</h1>
 
 <p>
-Home Repairs 4U delivers expert pressure washing services across Carcroft, helping property owners rejuvenate their outdoor surfaces. Driveways, patios, pathways, walls and decking often accumulate moss, algae, stains, and dirt over time, making spaces look worn and unsafe.
+At Home Repairs 4U, we specialise in professional pressure washing services for driveways, patios, decking, walls, and pathways in Carcroft. Over time, surfaces accumulate dirt, moss, algae, and black spot, which can cause surfaces to look worn and become slippery.
 </p>
 
 <p>
-Our goal is not just cosmetic. Removing algae, black spot, and other growths improves surface safety, prevents deterioration, and restores the natural colour of paving, stone, timber, and concrete. Well-maintained exterior spaces also enhance kerb appeal and add long-term value to your property.
+Our services go beyond aesthetics. Removing moss and algae protects surfaces from long-term damage, improves safety, and restores the original colour and texture of your paving, stone, concrete, or timber surfaces. Clean exteriors also enhance kerb appeal and create a welcoming impression for visitors or potential buyers.
 </p>
 
 <p>
-Properties in Carcroft are exposed to seasonal rainfall, shade from trees or buildings, and traffic residue. These conditions accelerate grime accumulation and can make surfaces slippery or unsightly if left untreated. Our professional service addresses these issues efficiently and effectively.
+Carcroft properties face frequent rainfall, shade from trees or buildings, and exposure to traffic residue. These conditions accelerate dirt and organic growth accumulation. Our professional pressure washing service is designed to remove these issues efficiently while maintaining the integrity of your surfaces.
 </p>
 
-<h2>How Our Pressure Washing Works</h2>
+<h2>How We Work</h2>
 
 <p>
-We start each job by evaluating the surface type, condition, and the level of contamination. This ensures that pressure and cleaning methods are appropriate, preventing damage to older paving, delicate stone, or timber decking.
-</p>
-
-<p>
-Next, we may pre-treat areas with stubborn dirt, moss, or algae. This loosens debris before the high-pressure wash, allowing us to clean more thoroughly without excessive water force. Corners, joints, and edges are carefully cleaned to ensure a consistent finish.
+Each job starts with a thorough assessment of the surface. We determine the condition, age, and type of material to select the correct water pressure and cleaning method. This ensures that delicate surfaces, such as older paving or timber decking, are protected.
 </p>
 
 <p>
-After cleaning, surfaces can optionally be re-sanded, treated with a fungicide to prevent regrowth, or sealed to protect against the elements. Each step is tailored to the property’s needs, maximizing lifespan and appearance.
+Stubborn dirt or growths may receive pre-treatment to loosen debris before washing. This allows for deeper cleaning with reduced pressure, safeguarding surfaces. Corners, edges, and joints receive special attention to achieve a uniform and thorough clean.
 </p>
 
-<h2>Instant Pressure Washing Estimate</h2>
+<p>
+Post-cleaning, optional services include re-sanding block paving, applying fungicide to inhibit regrowth, or sealing surfaces to protect against the elements. Every treatment is customised for the property’s needs, extending lifespan and maintaining appearance.
+</p>
 
-<p>Use the calculator below to estimate the cost based on area size and selected treatments:</p>
+<h2>Instant Pressure Washing Quote</h2>
+<p>Estimate the cost for your surfaces using our calculator below:</p>
 
 <form id="quoteForm">
-
-<label for="sqm">Approximate surface area (m²)</label>
+<label for="sqm">Surface area (m²)</label>
 <input type="number" id="sqm" name="sqm" min="1" step="0.01" required>
 
 <div class="form-row"><input type="checkbox" id="jetwash" checked><label for="jetwash">Standard pressure wash</label></div>
 <div class="form-row"><input type="checkbox" id="fungicide"><label for="fungicide">Algae & moss treatment</label></div>
-<div class="form-row"><input type="checkbox" id="hardbrush"><label for="hardbrush">Detailed scrubbing for heavy soiling</label></div>
+<div class="form-row"><input type="checkbox" id="hardbrush"><label for="hardbrush">Heavy soil scrubbing</label></div>
 <div class="form-row"><input type="checkbox" id="resanding"><label for="resanding">Block paving re-sanding</label></div>
-<div class="form-row"><input type="checkbox" id="sealing"><label for="sealing">Protective surface sealing</label></div>
+<div class="form-row"><input type="checkbox" id="sealing"><label for="sealing">Surface sealing</label></div>
 
-<button type="button" onclick="calculateQuote()" class="call-btn">Get Estimated Price</button>
-
+<button type="button" onclick="calculateQuote()" class="call-btn">Get Estimate</button>
 </form>
+
 <div id="quoteResult" style="margin-top:22px;font-size:18px;font-weight:bold;"></div>
 
 <script>
@@ -146,66 +131,61 @@ let total=45;
 let items=["Base service, setup and travel: £45.00"];
 if(jetwash.checked){let p=sqm*2.6;total+=p;items.push(`Pressure washing: £${p.toFixed(2)}`);}
 if(fungicide.checked){let p=sqm*0.9;total+=p;items.push(`Algae & moss treatment: £${p.toFixed(2)}`);}
-if(hardbrush.checked){let p=sqm*0.8;total+=p;items.push(`Detailed scrubbing: £${p.toFixed(2)}`);}
+if(hardbrush.checked){let p=sqm*0.8;total+=p;items.push(`Heavy soil scrubbing: £${p.toFixed(2)}`);}
 if(resanding.checked){let p=sqm*3.8;total+=p;items.push(`Block paving re-sanding: £${p.toFixed(2)}`);}
 if(sealing.checked){let p=sqm*4.8;total+=p;items.push(`Surface sealing: £${p.toFixed(2)}`);}
 document.getElementById("quoteResult").innerHTML=`<ul>${items.map(i=>`<li>${i}</li>`).join("")}</ul><p><strong>Estimated total: £${total.toFixed(2)}</strong></p>`;
 }
 </script>
 
-<h2>Our Services</h2>
+<h2>Our Pressure Washing Services</h2>
 
 <h3>Driveway Cleaning</h3>
 <p>
-Our service lifts years of grime, moss, tyre marks, and oil stains from block paving, concrete, and tarmac driveways. We also offer re-sanding to restore joint stability and prevent weed growth.
+We remove moss, algae, dirt, tyre marks, and oil stains from block paving, concrete, and tarmac. Re-sanding restores joint stability and reduces weed growth.
 </p>
-<a href="#driveway-lightbox"><img src="/images/driveway-pressure-wash.webp" alt="Driveway pressure washing Carcroft Doncaster" class="service-image" loading="lazy"></a>
+<a href="#driveway-lightbox"><img src="/images/driveway-pressure-wash.webp" alt="Driveway cleaning Carcroft" class="service-image" loading="lazy"></a>
 <div id="driveway-lightbox" class="lightbox"><a href="#"><img src="/images/driveway-pressure-wash.webp" alt="Driveway enlarged"></a></div>
 
 <h3>Patio & Paving Cleaning</h3>
 <p>
-Patios often suffer from black spot, moss, and weed growth. We carefully clean all types of paving using pressure levels suited to the surface, preserving joints and stone integrity.
+Our careful pressure washing removes black spot, moss, and weeds from all patio types, preserving joints and surface integrity.
 </p>
-<a href="#patio-lightbox"><img src="/images/patio-jet-wash.webp" alt="Patio pressure washing Carcroft" class="service-image" loading="lazy"></a>
+<a href="#patio-lightbox"><img src="/images/patio-jet-wash.webp" alt="Patio cleaning Carcroft" class="service-image" loading="lazy"></a>
 <div id="patio-lightbox" class="lightbox"><a href="#"><img src="/images/patio-jet-wash.webp" alt="Patio enlarged"></a></div>
 
 <h3>Decking Cleaning</h3>
 <p>
-Wooden decking requires precise handling to remove algae and dirt without damaging timber. Our service restores the natural look, improves safety, and prepares decking for sealing or treatment if required.
+Decking cleaning removes algae and dirt without damaging timber. It restores natural colour, improves safety, and prepares surfaces for sealing or treatment.
 </p>
-<a href="#deck-lightbox"><img src="/images/deck.webp" alt="Decking pressure washing Carcroft" class="service-image" loading="lazy"></a>
+<a href="#deck-lightbox"><img src="/images/deck.webp" alt="Decking cleaning Carcroft" class="service-image" loading="lazy"></a>
 <div id="deck-lightbox" class="lightbox"><a href="#"><img src="/images/deck.webp" alt="Decking enlarged"></a></div>
 
 <h3>Walls, Steps & Pathways</h3>
 <p>
-Pressure washing walls, steps, and pathways removes dirt, algae, and pollutants. This not only enhances the visual appeal of a property but also reduces slip hazards and prevents long-term surface damage.
+Cleaning these surfaces removes grime, algae, and pollution, enhancing appearance and reducing slip hazards.
 </p>
-<a href="#walls-lightbox"><img src="/images/pressure-wash-1.webp" alt="Walls and pathways pressure washing Carcroft" class="service-image" loading="lazy"></a>
+<a href="#walls-lightbox"><img src="/images/pressure-wash-1.webp" alt="Walls and pathways cleaning Carcroft" class="service-image" loading="lazy"></a>
 <div id="walls-lightbox" class="lightbox"><a href="#"><img src="/images/pressure-wash-1.webp" alt="Walls and pathways enlarged"></a></div>
 
 <h2>Maintenance Advice</h2>
 <p>
-Regular cleaning protects surfaces from long-term damage caused by moss, algae, and trapped moisture. For most residential driveways and patios in Carcroft, we recommend at least one professional clean per year, with more frequent attention for shaded or high-traffic areas.
-</p>
-<p>
-Periodic re-sanding and sealing extends the lifespan of paved areas and decking while preventing weed growth and reducing maintenance costs over time. Following these simple maintenance steps ensures your outdoor spaces remain safe, attractive, and durable.
+Regular cleaning protects surfaces from damage caused by moss, algae, and trapped moisture. Most properties benefit from a clean at least once per year. High-traffic or shaded areas may require more frequent attention. Re-sanding and sealing block paving or decking extends lifespan and reduces maintenance costs.
 </p>
 
 <h2>Why Choose Home Repairs 4U?</h2>
 <ul>
 <li>✔ Over 30 years of hands-on exterior cleaning experience</li>
-<li>✔ Fully insured for your peace of mind</li>
-<li>✔ Local Carcroft and Doncaster service</li>
-<li>✔ Transparent pricing and clear estimates</li>
+<li>✔ Fully insured and local to Carcroft & Doncaster</li>
+<li>✔ Transparent pricing with no hidden fees</li>
 <li>✔ Safe, surface-specific cleaning methods</li>
-<li>✔ Commercial-grade pressure washing equipment</li>
+<li>✔ Commercial-grade equipment for professional results</li>
 </ul>
 
-<h2>Book Your Pressure Washing Service</h2>
+<h2>Book Your Service Today</h2>
 <p>
-If your driveway, patio, decking, or other outdoor surfaces need restoring, our professional team in Carcroft is ready to help. We offer fast, reliable service and are happy to advise on the best treatment for your property.
+If you want your driveway, patio, decking, or other exterior surfaces restored, call our Carcroft team today. We offer fast, reliable service and tailored treatments to protect and enhance your property.
 </p>
-
 <div style="text-align:center;margin:36px 0;">
 <a href="tel:07735873694" class="call-btn">Call 07735 873694</a>
 </div>
